--- a/README.org
+++ b/README.org
@@ -67,3 +67,21 @@ You should have received a copy of the BSD 3-Clause "New" or "Revised" License a
 #+end_quote
 
 * Table of Contents :toc:
+- [[#usage][Usage]]
+- [[#build-from-source][Build from source]]
+
+* Usage
+
+(...)
+
+* Build from source
+
+(...)
+
+#+begin_src sh
+mkdir -p build
+for i in src/*.cc; do
+  g++ -I include -std=c++20 -Wall -Wextra -pedantic -Werror -c $i -o "build/$(basename ${i%.cc}).o"
+done
+ar -rc liblongwang.a build/*.o
+#+end_src
